UWP版の3Dモデルを上半身に差し替えて、メイン部分の幅を変更できるスライダー追加。 ランメモ１，２の追加

--- a/RanCyan/RanCyan/Views/GenericRandomMainPage.xaml
+++ b/RanCyan/RanCyan/Views/GenericRandomMainPage.xaml
@@ -387,7 +387,10 @@
                             <Button Text = "乱屍" Command="{Binding InitializationCommand}" CommandParameter="乱屍" />
                         </ViewCell>
                         <ViewCell>
-                            <Button Text = "乱メモ" Command="{Binding InitializationCommand}" CommandParameter="乱メモ" />
+                            <Button Text = "乱メモ1" Command="{Binding InitializationCommand}" CommandParameter="乱メモ1"/>
+                        </ViewCell>
+                        <ViewCell>
+                            <Button Text = "乱メモ2" Command="{Binding InitializationCommand}" CommandParameter="乱メモ2"/>
                         </ViewCell>
                         <ViewCell>
                             <Button Text = "サイコロ" Command="{Binding InitializationCommand}" CommandParameter="サイコロ" />
