--- a/RanCyan/RanCyan/Views/GenericRandomMainPage.xaml
+++ b/RanCyan/RanCyan/Views/GenericRandomMainPage.xaml
@@ -399,6 +399,11 @@
                             <Button Text = "サイコロ" Command="{Binding InitializationCommand}" CommandParameter="サイコロ" />
                         </ViewCell>
                     </TableSection>
+                    <TableSection Title="ページ名称">
+                        <ViewCell>
+                            <Entry Text="{Binding Title.Value}" />
+                        </ViewCell>
+                    </TableSection>
                 </TableRoot>
             </TableView>
             <ff:CachedImage Aspect = "AspectFit" Source="resource://RanCyan.Images.TalkRanCyan.png"  />
