--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="RanCyan.Views.LotteryUwpPage">
-  
+             x:Class="RanCyan.Views.LotteryUwpPage"
+             Title="{Binding Title.Value}">
+
 </ContentPage>
