--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -2,8 +2,20 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
+             xmlns:views="clr-namespace:RanCyan.Views"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="RanCyan.Views.LotteryUwpPage"
              Title="{Binding Title.Value}">
+
+  <CollectionView ItemsSource="{Binding LotteryCategorySelectionViewModels}">
+    <CollectionView.ItemsLayout>
+      <GridItemsLayout Orientation="Vertical" Span="2" />
+    </CollectionView.ItemsLayout>
+    <CollectionView.ItemTemplate>
+      <DataTemplate>
+        <views:LotteryCategorySelectionView BindingContext="{Binding}"/>
+      </DataTemplate>
+    </CollectionView.ItemTemplate>
+  </CollectionView>
 
 </ContentPage>
