--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -7,15 +7,28 @@
              x:Class="RanCyan.Views.LotteryUwpPage"
              Title="{Binding Title.Value}">
 
-  <CollectionView ItemsSource="{Binding LotteryCategorySelectionViewModels}">
-    <CollectionView.ItemsLayout>
-      <GridItemsLayout Orientation="Vertical" Span="2" />
-    </CollectionView.ItemsLayout>
-    <CollectionView.ItemTemplate>
-      <DataTemplate>
-        <views:LotteryCategorySelectionView BindingContext="{Binding}"/>
-      </DataTemplate>
-    </CollectionView.ItemTemplate>
-  </CollectionView>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="400" />
+      <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
+    <CollectionView Grid.Row="0" Grid.Column="1"
+                    ItemsSource="{Binding LotteryCategorySelectionViewModels}"
+                    ItemsLayout="HorizontalList">
+      <CollectionView.ItemTemplate>
+        <DataTemplate>
+          <Grid>
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="115" />
+            </Grid.ColumnDefinitions>
+            <views:LotteryCategorySelectionView BindingContext="{Binding}"/>
+          </Grid>
+        </DataTemplate>
+      </CollectionView.ItemTemplate>
+    </CollectionView>
+  </Grid>
 
 </ContentPage>
